// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Snackbar /> should render with multiple snackbar items 1`] = `
<div
  class="crayons-snackbar"
>
  <div
    class="crayons-snackbar__item flex"
  >
    <div
      class="crayons-snackbar__body"
    >
      File uploaded successfully
    </div>
    <div
      class="crayons-snackbar__actions"
    />
  </div>
  <div
    class="crayons-snackbar__item flex"
  >
    <div
      class="crayons-snackbar__body"
    >
      Unable to save file
    </div>
    <div
      class="crayons-snackbar__actions"
    >
      <button
        class="crayons-btn crayons-btn--ghost-success crayons-btn--inverted"
        disabled={false}
        onClick={[MockFunction]}
        type="button"
      >
        Retry
      </button>
      <button
        class="crayons-btn crayons-btn--ghost-success crayons-btn--inverted"
        disabled={false}
        onClick={[MockFunction]}
        type="button"
      >
        Abort
      </button>
    </div>
  </div>
  <div
    class="crayons-snackbar__item flex"
  >
    <div
      class="crayons-snackbar__body"
    >
      There was a network error
    </div>
    <div
      class="crayons-snackbar__actions"
    >
      <button
        class="crayons-btn crayons-btn--ghost-success crayons-btn--inverted"
        disabled={false}
        onClick={[MockFunction]}
        type="button"
      >
        Retry
      </button>
    </div>
  </div>
</div>
`;

exports[`<Snackbar /> should render with one snackbar item 1`] = `
<div
  class="crayons-snackbar"
>
  <div
    class="crayons-snackbar__item flex"
  >
    <div
      class="crayons-snackbar__body"
    >
      File uploaded successfully
    </div>
    <div
      class="crayons-snackbar__actions"
    />
  </div>
</div>
`;
